# hybrid-precision

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  OPEN_SOURCE_SUMMARY.md  QUICK_START.md  README.md  README_EN.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  experiment_manager.py  extract_medium_samples.py  paper_draft.md  paper_english.md  pyproject.toml  summary.md  项目状态总结.md
.github/: README_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
dataset/: diagnose_data.py  download_wiki_contents.py  extract_titles_v2.py  hotpot_medium_batch_1.json  hotpot_medium_batch_2.json  hotpot_medium_batch_3.json  hotpot_medium_batch_4.json  hotpot_medium_batch_5.json  hotpot_sample_200.json  hotpot_sample_200_balanced.json  prepare_sample.py  small_test_10.json  titles.json
examples/: README.md  basic_usage.py  simple_evaluation.py
experiment_code/: .env.example  1000_samples_baseline_summary.json  1000_samples_baseline_summary.py  README.md  __init__.py  advanced_hybrid_precision.py  analyze_baseline_results.py  analyze_experiment2_results.py  analyze_experiment3_results.py  baseline_comprehensive_analysis.json  baseline_only_experiment.py  batch_experiment_manager.py  comprehensive_comparison_report.json  comprehensive_comparison_report.py  config.json  experiment2_comprehensive_analysis.json  experiment3_comprehensive_analysis.json  experiment_2_fixed_simple_hybrid_standard_ragas.py  experiment_3_simple_hybrid_hybrid_precision.py  experiment_advanced_hybrid_precision.py  fixed_api_client.py  fixed_ragas_evaluator.py  fully_fixed_ragas.py  generator.py  main.py  optimized_hybrid_precision.py  ragas_hybrid_extension.py  retriever.py  run_all_batch_experiments.py  setup_knowledge_base.py  weight_optimization.py
experiment_code/batch_results/: baseline_batch_1_200_samples_intermediate.json  baseline_batch_1_200_samples_progress.json  baseline_batch_1_200_samples_results.json  baseline_batch_2_200_samples_intermediate.json  baseline_batch_2_200_samples_progress.json  baseline_batch_2_200_samples_results.json  baseline_batch_3_200_samples_intermediate.json  baseline_batch_3_200_samples_progress.json  baseline_batch_3_200_samples_results.json  baseline_batch_4_200_samples_intermediate.json  baseline_batch_4_200_samples_progress.json  baseline_batch_4_200_samples_results.json  baseline_batch_5_200_samples_intermediate.json  baseline_batch_5_200_samples_progress.json  baseline_batch_5_200_samples_results.json  hybrid_precision_batch_1_200_samples_intermediate.json  hybrid_precision_batch_1_200_samples_progress.json  hybrid_precision_batch_1_200_samples_results.json  hybrid_precision_batch_2_200_samples_intermediate.json  hybrid_precision_batch_2_200_samples_progress.json  hybrid_precision_batch_2_200_samples_results.json  hybrid_precision_batch_3_200_samples_intermediate.json  hybrid_precision_batch_3_200_samples_progress.json  hybrid_precision_batch_3_200_samples_results.json  hybrid_precision_batch_4_200_samples_intermediate.json  hybrid_precision_batch_4_200_samples_progress.json  hybrid_precision_batch_4_200_samples_results.json  hybrid_precision_batch_5_200_samples_intermediate.json  hybrid_precision_batch_5_200_samples_progress.json  hybrid_precision_batch_5_200_samples_results.json  hybrid_standard_batch_1_200_samples_intermediate.json  (+14 more)
knowledge_base/: documents.json
knowledge_data/: knowledge_base.json  knowledge_index.json
tests/: __init__.py  test_adaptive_weights.py  test_hybrid_precision.py  test_information_theory.py  test_ragas_extension.py
(+39 files in other folders)
